<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="205dp"
    android:layout_height="240dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView

            android:layout_width="205dp"
            android:layout_height="160dp"
            android:id="@+id/img1"
            app:srcCompat="@drawable/trends2"
            android:contentDescription="@string/imagen" />

        <TextView
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:lines="2"
            android:text="@string/title"
            android:textColor="#545454"
            android:textSize="16sp"
            android:fontFamily="@font/robotobolditalic"/>

        <TextView
            android:id="@+id/course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/subtitle"
            android:fontFamily="@font/robotobolditalic"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>


