<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_login"
        android:contentDescription="@string/imagen" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background"
        android:contentDescription="@string/imagen" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/bienvenido_nde_nuevo"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:textColor="@color/purple"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoitaliclight"
                />

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:background="@drawable/edittext_background2"
                android:inputType="textPersonName"
                android:hint="@string/correo"
                android:fontFamily="@font/roboto"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:background="@drawable/edittext_background2"
                android:inputType="textPassword"
                android:hint="@string/contrasena"
                android:fontFamily="@font/roboto"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:padding="8dp"
                android:layout_marginTop="32dp"
                android:autofillHints="password" />

            <ImageView
                android:id="@+id/iniciarApp"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/btn_login"
                android:contentDescription="@string/login"
                android:onClick="iniciarSesion"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/iniciarConGoogle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/inicia_con_google"
                android:fontFamily="@font/robotobold"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background2"
                android:drawableStart="@drawable/google"
                android:drawablePadding="16dp"
                android:padding="16dp"
                style="@android:style/Widget.Button"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/iniciarConFacebook"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/inicia_con_facebbok"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_background2"
                android:drawableStart="@drawable/facebook"
                android:drawablePadding="16dp"
                android:padding="16dp"
                style="@android:style/Widget.Button"
                android:textColor="@color/purple"
                android:fontFamily="@font/robotobold"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/irARegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eres_nuevo_usuario_registrate"
                android:fontFamily="@font/robotoitaliclight"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:textColor="@color/purple"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>