<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_login"
        android:contentDescription="@string/imagen" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background"
        android:contentDescription="@string/imagen" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:text="@string/crea_tu_ncuenta"
                android:textColor="@color/purple"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoitaliclight"
                />
            <EditText
                android:id="@+id/campoNombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:background="@drawable/edittext_background2"
                android:inputType="textPersonName"
                android:hint="@string/nombre"
                android:fontFamily="@font/roboto"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:autofillHints="username" />
            <EditText
                android:id="@+id/campoCorreo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"

                android:layout_marginEnd="32dp"
                android:ems="10"
                android:background="@drawable/edittext_background2"
                android:inputType="textPersonName"
                android:hint="@string/correo"
                android:fontFamily="@font/roboto"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:padding="8dp"
                android:layout_marginTop="32dp"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/campoContrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:background="@drawable/edittext_background2"
                android:inputType="textPassword"
                android:hint="@string/contrasena"
                android:fontFamily="@font/roboto"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:padding="8dp"
                android:layout_marginTop="32dp"
                android:autofillHints="password" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/btn_login"
                android:contentDescription="@string/imagen"
                android:onClick="registrar"/>

            <TextView
                android:id="@+id/irAInicioSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/ya_tienes_una_cuenta_iniciar_sesi_n"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:fontFamily="@font/robotoitaliclight"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>